--- a/puzzlers/pzzlr-037.html
+++ b/puzzlers/pzzlr-037.html
@@ -18,69 +18,30 @@
 <div class="code-snippet">
   <h3>What is the result of executing the following code?</h3>
 <pre class="prettyprint lang-scala">
-val myList = List(1,2,3,4,5)
-val myMap  = Map(1 -> myList)
-val bits   = myMap map { case (k, v) => (k, v.toIterator) }
-val nits   = myMap mapValues (_.toIterator)
+val ints = Map(1 -> List(1,2,3,4,5))
+val bits = ints map { case (k, v) => (k, v.toIterator) }
+val nits = ints mapValues (_.toIterator)
 
-bits(1).next
-bits(1).next
-bits(1).size
-bits(1).next
-
-nits(1).next
-nits(1).next
-nits(1).size
-nits(1).next
+"%d%d / %d%d".format(
+    bits(1).next, bits(1).next,
+    nits(1).next, nits(1).next)
 </pre>
   <ol>
      <li>
 <pre class="prettyprint lang-scala">
-1
-2
-5
-3
-
-1
-2
-5
-3
+12 / 12
 </pre></li>
      <li>
 <pre class="prettyprint lang-scala">
-non-empty iterator
-non-empty iterator
-1
-non-empty iterator
-
-non-empty iterator
-non-empty iterator
-1
-non-empty iterator
+12 / 21
 </pre></li>
      <li>
 <pre class="prettyprint lang-scala">
-1
-2
-3
 java.util.NoSuchElementException: next on empty iterator
-
-1
-2
-3
-3
 </pre></li>
      <li id="correct-answer">
 <pre class="prettyprint lang-scala">
-1
-2
-3
-java.util.NoSuchElementException: next on empty iterator
-
-1
-1
-5
-1
+12 / 11
 </pre></li>
   </ol>
 </div>
