--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
               <li><a href="#" id="pzzlr-034">All's Well That Folds Well</a></li>
               <li><a href="#" id="pzzlr-035">A Case of Strings</a></li>
               <li><a href="#" id="pzzlr-036">Adaptive Reasoning</a></li>
+              <li><a href="#" id="pzzlr-037">A View to a Shill</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
