--- a/puzzlers/pzzlr-037.html
+++ b/puzzlers/pzzlr-037.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td><a target="_blank" href="https://issues.scala-lang.org/browse/SI-7580">Scala Issue</a></td>
+      <td><a target="_blank" href="https://issues.scala-lang.org/browse/SI-7580">Scala issue tracker</a></td>
     </tr>
     <tr>
       <td><strong>Tested with Scala version</strong></td>
@@ -18,30 +18,33 @@
 <div class="code-snippet">
   <h3>What is the result of executing the following code?</h3>
 <pre class="prettyprint lang-scala">
-val ints = Map(1 -> List(1,2,3,4,5))
+val ints = Map(1 -> List(1, 2, 3, 4, 5))
 val bits = ints map { case (k, v) => (k, v.toIterator) }
 val nits = ints mapValues (_.toIterator)
 
-"%d%d / %d%d".format(
-    bits(1).next, bits(1).next,
-    nits(1).next, nits(1).next)
+"%d%d".format(bits(1).next, bits(1).next)
+"%d%d".format(nits(1).next, nits(1).next)
 </pre>
   <ol>
      <li>
 <pre class="prettyprint lang-scala">
-12 / 12
+12
+12
 </pre></li>
      <li>
 <pre class="prettyprint lang-scala">
-12 / 21
+12
+21
 </pre></li>
      <li>
 <pre class="prettyprint lang-scala">
 java.util.NoSuchElementException: next on empty iterator
+java.util.NoSuchElementException: next on empty iterator
 </pre></li>
      <li id="correct-answer">
 <pre class="prettyprint lang-scala">
-12 / 11
+12
+11
 </pre></li>
   </ol>
 </div>
@@ -49,8 +52,8 @@ java.util.NoSuchElementException: next on empty iterator
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
-    A shill is the guy who tells you, "Sure, I use Map Oil all the time, it works great
-    and always gives me the Map I want.  I never use anything but Map Oil."
+    A shill is the guy who tells you: "Sure, I use Map Oil all the time, it works great
+    and always gives me the Map I want. I never use anything but Map Oil."
   </p>
   <p>
     Then you get home and open your bottle of Map Oil and try a bit, only to experience
@@ -65,10 +68,14 @@ java.util.NoSuchElementException: next on empty iterator
   <p>
     As explained in <a target="_blank" href="https://issues.scala-lang.org/browse/SI-4776">this ticket</a> and
     <a target="_blank" href="http://www.scala-lang.org/api/current/index.html#scala.collection.Map">the API</a>,
-    <tt>mapValues</tt> returns
-    "a map view which maps every key of this map to f(this(key)). The resulting map wraps the original map without copying any elements."
-    Each retrieval from the wrapped map results in a new evaluation of the mapping function, and in this case,
-    a new iterator.
+    <tt>mapValues</tt>
+  </p>
+  <blockquote><p style="font-size: 1.0em;">
+    returns a map view which maps every key of this map to f(this(key)). The resulting map
+    wraps the original map without copying any elements
+  </p></blockquote>
+  <p>
+    Each retrieval from the wrapped map results in a new evaluation of the mapping function, and in this case, a new iterator.
   </p>
   <p>
     The prescribed usage when a strict collection is needed is:
