--- a/contribute.html
+++ b/contribute.html
@@ -141,6 +141,7 @@
               <li><a href="/#pzzlr-035" id="pzzlr-035">A Case of Strings</a></li>
               <li><a href="/#pzzlr-036" id="pzzlr-036">Adaptive Reasoning</a></li>
               <li><a href="/#pzzlr-037" id="pzzlr-037">A View to a Shill</a></li>
+              <li><a href="/#pzzlr-038" id="pzzlr-038">What Were You Expecting?</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
