--- a/contact.html
+++ b/contact.html
@@ -142,6 +142,7 @@
               <li><a href="/#pzzlr-036" id="pzzlr-036">Adaptive Reasoning</a></li>
               <li><a href="/#pzzlr-037" id="pzzlr-037">A View to a Shill</a></li>
               <li><a href="/#pzzlr-038" id="pzzlr-038">What Were You Expecting?</a></li>
+              <li><a href="/#pzzlr-039" id="pzzlr-039">Accepts Any Args</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
