Using a more plausible candidate answer in #39

--- a/puzzlers/pzzlr-039.html
+++ b/puzzlers/pzzlr-039.html
@@ -28,8 +28,8 @@ acceptsAnyArgs("Psst", "hey", "world:")(4, 2)
   <ol>
     <li>Prints:
 <pre class="prettyprint lang-scala">
-Psst hey world:
-(4,2)
+WrappedArray(Psst, hey, world:)
+WrappedArray(4, 2)
 </pre>
     </li>
     <li id="correct-answer">Prints:
