--- a/contact.html
+++ b/contact.html
@@ -143,6 +143,7 @@
               <li><a href="/#pzzlr-037" id="pzzlr-037">A View to a Shill</a></li>
               <li><a href="/#pzzlr-038" id="pzzlr-038">What Were You Expecting?</a></li>
               <li><a href="/#pzzlr-039" id="pzzlr-039">Accepts Any Args</a></li>
+              <li><a href="/#pzzlr-040" id="pzzlr-040">Set the Record Straight</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
