Adding puzzler #40: "Signs of Trouble"
Contributed by A.P. Marki

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
               <li><a href="#" id="pzzlr-038">What Were You Expecting?</a></li>
               <li><a href="#" id="pzzlr-039">Accepts Any Args</a></li>
               <li><a href="#" id="pzzlr-040">Set the Record Straight</a></li>
+              <li><a href="#" id="pzzlr-041">Signs of Trouble</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
