--- a/contribute.html
+++ b/contribute.html
@@ -144,6 +144,7 @@
               <li><a href="/#pzzlr-038" id="pzzlr-038">What Were You Expecting?</a></li>
               <li><a href="/#pzzlr-039" id="pzzlr-039">Accepts Any Args</a></li>
               <li><a href="/#pzzlr-040" id="pzzlr-040">Set the Record Straight</a></li>
+              <li><a href="/#pzzlr-041" id="pzzlr-041">Signs of Trouble</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
