--- a/puzzlers/pzzlr-041.html
+++ b/puzzlers/pzzlr-041.html
@@ -34,26 +34,26 @@ def check(d: Double) = signum(d) match {
 
 check(1.0 / PositiveInfinity)
 check(1.0 / NegativeInfinity)
-
 </pre>
   <ol>
+    <li id="correct-answer">Fails with a compilation exception</li>
     <li>Prints:
 <pre class="prettyprint lang-scala">
 underflow from the right
 underflow from the left
-</pre></li>
+</pre>
+    </li>
     <li>Prints:
 <pre class="prettyprint lang-scala">
 underflow from the right
 underflow from the right
-</pre></li>
+</pre>
+    </li>
     <li>Prints:
 <pre class="prettyprint lang-scala">
 scala.MatchError: -0.0 (of class java.lang.Double)
-</pre></li>
-     <li id="correct-answer">
-Does not compile.
-</li>
+</pre>
+    </li>
   </ol>
 </div>
 <button id="show-and-tell" class="btn btn-primary" href="#">Display the correct answer, explanation and comments</button>
@@ -66,37 +66,43 @@ error: '=>' expected but double literal found.
   </p>
   <p>
   A numeric literal can appear in the pattern of a case statement,
-  but while <tt>-1.0</tt> is a double literal, <tt>+1.0</tt> is not.
+  but while <tt>-1.0</tt> is a double literal, <tt>+1.0</tt> is <strong>not</strong>.
   It is an invocation of <tt>1.0.unary_+</tt>.
   </p>
   <p>
   In this case, the <tt>+</tt> is taken as an identifier. Consider:
 <pre class="prettyprint lang-scala">
-  scala> val + = 7
-  +: Int = 7
+scala> val + = 7
++: Int = 7
 
-  scala> 7 match { case + => true case _ => false }
-  res4: Boolean = true
+scala> 7 match { case + => true case _ => false }
+res4: Boolean = true
   
-  scala> :se -Xprint:parser
-
-  scala> +7
-  [[syntax trees at end of                    parser]] // <console>
-  [snip]
+scala> :se -Xprint:parser
+scala> +7
+[[syntax trees at end of                    parser]] // <console>
+...
            val res5 = 7.unary_$plus
 </pre>
   </p>
   <p>
   The remainder of the example code is a pinkish to crimson herring.
-  </p>
-  <p>
   Recall that <tt>+0.0</tt> compares equal to <tt>-0.0</tt>,
   so that the match fails to distinguish them. Compare:
 <pre class="prettyprint lang-scala">
-def check0(d: Double) = 1.0 / d match {
-  case NegativeInfinity => "underflow from the left"   // d.toString startsWith "-"
-  case PositiveInfinity => "underflow from the right"
+def check0take1(d: Double) = d match {
+  case -0.0 => "negative zero"
+  case 0.0 => "positive zero"
 }
+check0take1(-0.0)
+check0take1(0.0)
+
+def check0take2(d: Double) = 1.0 / d match {
+  case NegativeInfinity => "negative zero"
+  case PositiveInfinity => "positive zero"
+}
+check0take2(-0.0)
+check0take2(0.0)
 </pre>
   <p>
   This puzzler was inspired by <a target="_blank" href="https://issues.scala-lang.org/browse/SI-4950">this famous ticket</a>
