--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
               <li><a href="#" id="pzzlr-039">Accepts Any Args</a></li>
               <li><a href="#" id="pzzlr-040">Set the Record Straight</a></li>
               <li><a href="#" id="pzzlr-041">Signs of Trouble</a></li>
+              <li><a href="#" id="pzzlr-042">The Devil is in the Defaults</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
