--- a/contact.html
+++ b/contact.html
@@ -146,6 +146,7 @@
               <li><a href="/#pzzlr-040" id="pzzlr-040">Set the Record Straight</a></li>
               <li><a href="/#pzzlr-041" id="pzzlr-041">Signs of Trouble</a></li>
               <li><a href="/#pzzlr-042" id="pzzlr-042">The Devil is in the Defaults</a></li>
+              <li><a href="/#pzzlr-043" id="pzzlr-043">Market Precedence</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
