Changing a candidate answer for "Arg Arrgh!"
It's reasonable to assume that the second function (twiceB) is the only one that will not compile, because its sole first curried argument does not narrow down the type parameter.

--- a/puzzlers/pzzlr-007.html
+++ b/puzzlers/pzzlr-007.html
@@ -43,8 +43,9 @@ Int = 16
 	All four fail with compilation errors
     </li>
     <li>
-      The second and fourth fail with compilation errors, the first and third print:
+      The second fails with a compilation error, the first, third and fourth print:
  <pre class="prettyprint lang-scala">
+Int = 16
 Int = 16
 Int = 16
 </pre>
