Renaming puzzler #5: "The Trouble With Traits 2" -> "Now You See Me, Now You Don't"
Based on a suggestion by @nermin

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <li><a href="#" id="pzzlr-001">Hi There!</a></li>
               <li><a href="#" id="pzzlr-003">UPSTAIRS downstairs</a></li> 
               <li><a href="#" id="pzzlr-004">The Trouble With Traits</a></li>
-              <li><a href="#" id="pzzlr-005">The Trouble With Traits 2</a></li>
+              <li><a href="#" id="pzzlr-005">Now You See Me, Now You Don't</a></li>
               <li><a href="#" id="pzzlr-006">The Missing List</a></li>  
               <li><a href="#" id="pzzlr-007">Arg Arrgh!</a></li>
               <li><a href="#" id="pzzlr-008">Captured by Closures</a></li>
