--- a/puzzlers/pzzlr-005.html
+++ b/puzzlers/pzzlr-005.html
@@ -1,5 +1,5 @@
 <div id="title">
-  <h1>The Trouble With Traits 2</h1>
+  <h1>Now You See Me, Now You Don't</h1>
 </div>
 <table class="table meta-table table-condensed">
   <tbody>
