--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
               <li><a href="/#pzzlr-001" id="pzzlr-001">Hi There!</a></li>
               <li><a href="/#pzzlr-003" id="pzzlr-003">UPSTAIRS downstairs</a></li> 
               <li><a href="/#pzzlr-004" id="pzzlr-004">The Trouble With Traits</a></li>
-              <li><a href="/#pzzlr-005" id="pzzlr-005">The Trouble With Traits 2</a></li>
+              <li><a href="/#pzzlr-005" id="pzzlr-005">Now You See Me, Now You Don't</a></li>
               <li><a href="/#pzzlr-006" id="pzzlr-006">The Missing List</a></li>  
               <li><a href="/#pzzlr-007" id="pzzlr-007">Arg Arrgh!</a></li>
               <li><a href="/#pzzlr-008" id="pzzlr-008">Captured by Closures</a></li>
