Aligning candidate answer formatting in #1 with others

--- a/puzzlers/pzzlr-001.html
+++ b/puzzlers/pzzlr-001.html
@@ -26,7 +26,7 @@ List(1, 2).map { i => println("Hi"); i + 1 }
 List(1, 2).map { println("Hi"); _ + 1 }
 </pre>
   <ol>  
-    <li>
+    <li>Prints:
       <pre class="prettyprint lang-scala">
 List[Int] = List(2, 3)
 List[Int] = List(2, 3)
@@ -36,7 +36,7 @@ Hi
 List[Int] = List(2, 3)
 </pre>
     </li>
-    <li>
+    <li>Prints:
       <pre class="prettyprint lang-scala">
 List[Int] = List(2, 3)
 List[Int] = List(2, 3)
@@ -48,7 +48,7 @@ Hi
 List[Int] = List(2, 3)
 </pre>
     </li>
-    <li id="correct-answer">
+    <li id="correct-answer">Prints:
       <pre class="prettyprint lang-scala">
 List[Int] = List(2, 3)
 List[Int] = List(2, 3)
@@ -59,7 +59,7 @@ Hi
 List[Int] = List(2, 3)
 </pre>
     </li>
-    <li>
+    <li>Prints:
       <pre class="prettyprint lang-scala">
 List[Int] = List(2, 3)
 List[Int] = List(2, 3)
