Updating sample answers for puzzler #1

--- a/puzzlers/pzzlr-001.html
+++ b/puzzlers/pzzlr-001.html
@@ -59,13 +59,15 @@ Hi
 List[Int] = List(2, 3)
 </pre>
     </li>
-    <li>Prints:
+    <li>The first, second and third statements print:
       <pre class="prettyprint lang-scala">
 List[Int] = List(2, 3)
-List[Int] = List(2, 3)
+Hi
+Hi
 List[Int] = List(2, 3)
 List[Int] = List(2, 3)
 </pre>
+    and the fourth fails with a compilation error.
     </li>
   </ol>
 </div>
