--- a/puzzlers/pzzlr-043.html
+++ b/puzzlers/pzzlr-043.html
@@ -45,7 +45,7 @@ NewStyleMarket main null
 OldSkoolMarket main null
 </pre>
     <ol>
-    <li>
+    <li>Prints:
 <pre class="prettyprint lang-scala">
 6
 100
@@ -59,7 +59,7 @@ OldSkoolMarket main null
 100
 </pre>
     </li>
-    <li>
+    <li>Prints:
 <pre class="prettyprint lang-scala">
 60
 100
