--- a/puzzlers/pzzlr-008.html
+++ b/puzzlers/pzzlr-008.html
@@ -63,24 +63,22 @@ funcs2.foreach { f2 => println(f2()) }
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
-  When one uses a <tt>var</tt> instead of a <tt>val</tt> the functions closes over a variable and not over a value. Because <tt>i</tt> is defined in the for-comprehension it is defined as a <tt>val</tt>. This means each time <tt>i</tt> is stored somewhere its value is copied - therefore it prints the expected result <tt>100, 110, 120</tt>. As <tt>j</tt> changes inside the loop, all the three closures "see" the very same variable <tt>j</tt> and not a copy of it. Because after the loop <tt>j</tt> is <tt>3</tt> an <tt>ArrayIndexOutOfBoundsException</tt> is thrown. It is possible to avoid the exception by adding another variable, which stores the numbers of the Seq:
+  When one uses a <tt>var</tt> instead of a <tt>val</tt> the functions closes over a variable and not over a value. Because <tt>i</tt> is defined in the for-comprehension it is defined as a <tt>val</tt>. This means each time <tt>i</tt> is stored somewhere its value is copied - therefore it prints the expected result <tt>100, 110, 120</tt>. As <tt>j</tt> changes inside the loop, all the three closures "see" the very same variable <tt>j</tt> and not a copy of it. Because after the loop <tt>j</tt> is <tt>3</tt> an <tt>ArrayIndexOutOfBoundsException</tt> is thrown. It is possible to avoid the exception by &quot;fixing&quot; the value to be returned:
   <pre class="prettyprint lang-scala">
 val values = Seq(100, 110, 120)
 val funcs1 = collection.mutable.Buffer[() => Int]()
 val funcs2 = collection.mutable.Buffer[() => Int]()
 var j = 0
-var value = 0
 for (i <- 0 until values.length) {
  funcs1 += (() => values(i))
- value = values(j)
+ val value = values(j)
  funcs2 += (() => value)
  j += 1
 }
-
 funcs1.foreach { f1 => println(f1()) }
 funcs2.foreach { f2 => println(f2()) }
   </pre>
-  When the functions in <tt>funcs2</tt> are called three times the number <tt>120</tt> is printed. Nevertheless most times the expected behavior is to print the elements of the Seq as it is done with <tt>funcs1</tt>.
+  <tt>value</tt>'s assignment is carried out immediately, and thus &quot;captures&quot; the intended element of <tt>values</tt>.
   </p>
 </div>
 
