Adding puzzler #44: "Float or Sink?"

--- a/about.html
+++ b/about.html
@@ -147,6 +147,7 @@
               <li><a href="/#pzzlr-041" id="pzzlr-041">Signs of Trouble</a></li>
               <li><a href="/#pzzlr-042" id="pzzlr-042">The Devil is in the Defaults</a></li>
               <li><a href="/#pzzlr-043" id="pzzlr-043">Market Precedence</a></li>
+              <li><a href="/#pzzlr-044" id="pzzlr-044">Float or Sink?</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
