--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
               <li><a href="#" id="pzzlr-041">Signs of Trouble</a></li>
               <li><a href="#" id="pzzlr-042">The Devil is in the Defaults</a></li>
               <li><a href="#" id="pzzlr-043">Market Precedence</a></li>
+              <li><a href="#" id="pzzlr-044">Float or Sink?</a></li>
               <li class="divider"></li>
             </ul>
           </div><!--/.well -->
