Fixing 'A Case of Equality' code sample
In 2.11.0-M4, the current code fails to compile:

scala> case class CC extends OverridesEquals
<console>:1: error: case classes without a parameter list are not allowed;
use either case objects or case classes with an explicit `()' as a parameter list.
       case class CC extends OverridesEquals
                    ^

--- a/puzzlers/pzzlr-011.html
+++ b/puzzlers/pzzlr-011.html
@@ -25,7 +25,7 @@ trait OverridesEquals {
 }
 
 class C extends OverridesEquals
-case class CC extends OverridesEquals
+case class CC() extends OverridesEquals
 
 val c1 = new C()
 val c2 = new C()
