--- a/puzzlers/pzzlr-010.html
+++ b/puzzlers/pzzlr-010.html
@@ -29,7 +29,7 @@ object XY {
   }
 }
 
-print(if(math.random > 0.5) XY.X.value else XY.Y.value)
+println(if (math.random > 0.5) XY.X.value else XY.Y.value)
 </pre>
 
 <ol>
