Aligning formatting of candidate answers for 'To Map, or Not to Map'

--- a/puzzlers/pzzlr-013.html
+++ b/puzzlers/pzzlr-013.html
@@ -32,25 +32,25 @@ numerals.foreach { numeral => print(numeral.representation + " ") }
 numerals.map(_.representation).foreach { representation => print(representation + " ") }
 </pre>
   <ol>  
-    <li id="correct-answer">Prints
+    <li id="correct-answer">Prints:
 <pre class="prettyprint lang-scala">
 I X C M
 C I M X
 </pre>
     </li>
-    <li>Prints
+    <li>Prints:
 <pre class="prettyprint lang-scala">
 M C I X
 I X C M
 </pre>
     </li>
-    <li>Prints
+    <li>Prints:
 <pre class="prettyprint lang-scala">
 I X C M
 I X C M
 </pre>
     </li>
-    <li>Prints
+    <li>Prints:
 <pre class="prettyprint lang-scala">
 M C I X
 C M I X
