--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <li class="nav-header">Puzzlers</li>
               <li><a href="#" id="pzzlr-001">Hi There!</a></li>
               <li><a href="#" id="pzzlr-003">UPSTAIRS downstairs</a></li> 
-              <li><a href="#" id="pzzlr-004">The Trouble With Traits</a></li>
+              <li><a href="#" id="pzzlr-004">Location, Location, Location</a></li>
               <li><a href="#" id="pzzlr-005">Now You See Me, Now You Don't</a></li>
               <li><a href="#" id="pzzlr-006">The Missing List</a></li>  
               <li><a href="#" id="pzzlr-007">Arg Arrgh!</a></li>
