Aligning candidate answer descriptions for 'The Trouble With Traits'

--- a/puzzlers/pzzlr-004.html
+++ b/puzzlers/pzzlr-004.html
@@ -38,7 +38,7 @@ new B1(42)
 new B2(42)
 </pre>
   <ol>  
-    <li>
+    <li>Prints:
       <pre class="prettyprint lang-scala">
 In A: foo: 42
 In B1: foo: 42
@@ -46,14 +46,14 @@ In A: foo: 42
 In B2: foo: 42
 </pre>
     </li>
-    <li>
+    <li>Prints:
       <pre class="prettyprint lang-scala">
 In A: foo: 25
 In B1: foo: 42
 In A: foo: 25
 In B2: foo: 42
 </pre>
-    </li>
+    </li>Prints:
     <li id="correct-answer">
       <pre class="prettyprint lang-scala">
 In A: foo: 0
@@ -62,7 +62,7 @@ In A: foo: 42
 In B2: foo: 42
 </pre>
     </li>
-    <li>
+    <li>Prints:
       <pre class="prettyprint lang-scala">
 In A: foo: 0
 In B1: foo: 42
