Aligning candidate answer descriptions for 'The Missing List'

--- a/puzzlers/pzzlr-006.html
+++ b/puzzlers/pzzlr-006.html
@@ -26,25 +26,25 @@ sumSizes(List(Set(1, 2), List(3, 4)))
 sumSizes(Set(List(1, 2), Set(3, 4)))
 </pre>
   <ol>  
-    <li>
+    <li>Prints:
       <pre class="prettyprint lang-scala">
 Int = 4
 Int = 4
 </pre>
     </li>
-    <li id="correct-answer">
+    <li id="correct-answer">Prints:
       <pre class="prettyprint lang-scala">
 Int = 4
 Int = 2
 </pre>
     </li>
-    <li>
+    <li>Prints:
       <pre class="prettyprint lang-scala">
 Int = 2
 Int = 4
 </pre>
     </li>
-    <li>
+    <li>Prints:
       <pre class="prettyprint lang-scala">
 Int = 2
 Int = 2
