Aligning candidate answer descriptions for 'Init You, Init Me'

--- a/puzzlers/pzzlr-010.html
+++ b/puzzlers/pzzlr-010.html
@@ -34,25 +34,25 @@ println(if (math.random > 0.5) XY.X.value else XY.Y.value)
 
 <ol>
 <li>
-Always prints
+Always prints:
 <pre class="prettyprint lang-scala">
 1
 </pre>
 </li>
 
 <li id="correct-answer">
-Always prints
+Always prints:
 <pre class="prettyprint lang-scala">
 2
 </pre>
 </li>
 
 <li>
-Nondeterministically prints either
+Nondeterministically prints either:
 <pre class="prettyprint lang-scala">
 1
 </pre>
-or
+or:
 <pre class="prettyprint lang-scala">
 2
 </pre>
