Aligning candidate answers for 'If At First You Don't Succeed...'

--- a/puzzlers/pzzlr-012.html
+++ b/puzzlers/pzzlr-012.html
@@ -31,18 +31,18 @@ try {
 }
 </pre>
   <ol>  
-    <li>Throws a 'divide by zero' exception</li>
-    <li id="correct-answer">Prints
+    <li>Fails at runtime with an <tt>java.lang.ArithmeticException: / by zero</tt></li>
+    <li id="correct-answer">Prints:
 <pre class="prettyprint lang-scala">
 1
 </pre>
     </li>
-    <li>Prints
+    <li>Prints:
 <pre class="prettyprint lang-scala">
 NaN
 </pre>
 </li>
-    <li>Prints
+    <li>Prints:
 <pre class="prettyprint lang-scala">
 &lt;lazy&gt;
 </pre>
