Aligning candidate answers for "Self: See 'Self'"

--- a/puzzlers/pzzlr-016.html
+++ b/puzzlers/pzzlr-016.html
@@ -35,9 +35,9 @@ println(s2.length)
 </pre>
 </li>
 
-<li>Both fail at runtime with NullPointerExceptions</li>
+<li>Both fail at runtime with <tt>NullPointerException</tt>s</li>
 
-<li id="correct-answer">The first fails at runtime with a NullPointerException, the second prints:
+<li id="correct-answer">The first fails at runtime with a <tt>NullPointerException</tt>, the second prints:
 <pre class="prettyprint lang-scala">
 8
 </pre>
