Aligning candidate answers for 'Implicitly Surprising'

--- a/puzzlers/pzzlr-019.html
+++ b/puzzlers/pzzlr-019.html
@@ -45,16 +45,17 @@ f(2)
 </pre>
 </li>
 
-<li id="correct-answer">The first invocation of <tt>f</tt> fails with a compilation error, and the second prints:
+<li id="correct-answer">The first invocation of <tt>f</tt> fails with a compilation exception, and the second prints:
 <pre class="prettyprint lang-scala">
 5
 </pre>
 </li>
 
-<li>The second invocation of <tt>f</tt> fails with a compilation error, and the first prints:
+<li>The first invocation of <tt>f</tt> prints:
 <pre class="prettyprint lang-scala">
 6
 </pre>
+and the second fails with a compilation exception
 </li>
 
 </ol>
