Aligning candidate answers for 'Return to Me!'

--- a/puzzlers/pzzlr-018.html
+++ b/puzzlers/pzzlr-018.html
@@ -48,7 +48,7 @@ println(value)
 </pre>
 </li>
 
-<li>The code does not compile, the compiler reports an <tt>unreachable code</tt> error.
+<li>Fails with an <tt>unreachable code</tt> compilation exception
 </li>
 </ol>
 
