Removing broken link from 'Now You See Me, Now You Don't'
Unable to find an archived version or suitable alternative online

--- a/puzzlers/pzzlr-005.html
+++ b/puzzlers/pzzlr-005.html
@@ -9,7 +9,7 @@
     </tr>
     <tr>
       <td><strong>Source</strong></td>
-      <td><a target="_blank" href="https://github.com/paulp/scala-faq/wiki/Initialization-Order">paulp / scala-faq</a></td>
+      <td>paulp / scala-faq</td>
     </tr>
     <tr>
       <td><strong>Tested with Scala version</strong></td>
