Adding code comment to explain ## to 'A Case of Equality'

--- a/puzzlers/pzzlr-011.html
+++ b/puzzlers/pzzlr-011.html
@@ -33,7 +33,7 @@ val ccspy1 = CCSpy()
 val ccspy2 = CCSpy()
 
 println(cc1 == cc2)
-println(cc1.## == cc2.##)
+println(cc1.## == cc2.##) // null-safe hashCode()
 println(ccspy1 == ccspy2)
 println(ccspy1.## == ccspy2.##)
 </pre>
