Correcting typo 'findAll' -> 'findAllIn' in '$!.*% Iterators!'

--- a/puzzlers/pzzlr-025.html
+++ b/puzzlers/pzzlr-025.html
@@ -66,7 +66,7 @@ java.lang.IllegalStateException: No match available
 <div id="explanation" class="explanation" style="display:none">
   <h3>Explanation</h3>
   <p>
-  The result of <tt>findAll</tt> is an <tt>Iterator</tt>. Until you somehow ask for or check the first element, such as calling <tt>next</tt>, <tt>hasNext</tt> or causing them to be called through <tt>toString</tt>, no regex match will be tried, causing the <tt>end</tt> method - from <tt>MatchData</tt>, also extended by <tt>MatchIterator</tt> - to throw an exception.
+  The result of <tt>findAllIn</tt> is an <tt>Iterator</tt>. Until you somehow ask for or check the first element, such as calling <tt>next</tt>, <tt>hasNext</tt> or causing them to be called through <tt>toString</tt>, no regex match will be tried, causing the <tt>end</tt> method - from <tt>MatchData</tt>, also extended by <tt>MatchIterator</tt> - to throw an exception.
   </p>
 </div>
 
