Clarifying a code comment in 'Pick an Int, Any Int'

--- a/puzzlers/pzzlr-029.html
+++ b/puzzlers/pzzlr-029.html
@@ -19,7 +19,7 @@
   <h3>What is the result of executing the following code?</h3>
 <pre class="prettyprint lang-scala">
 class A {
-  type X // X <: Any
+  type X // equivalent to X <: Any
   var x: X = _
 }
 class B extends A {
